# YSDA-CPU-inference

./: .gitignore  README.md  __init__.py  tinyimagenet.sh
benchmarks/: bench.py  bench1.py  bench2.py  bench3.py  bs_linear_bench.py  profiling.py  profiling2023-10-12 19:14:48.313956.txt  profiling2023-10-12 19:17:22.778689.txt  quant.py  res.txt
bencmark_results/: results2023-10-12 05:46:22.255026.txt  results2023-10-12 15:43:07.873372.txt  results2023-10-13 01:34:41.282238.txt
cpp/: .clang-tidy  CMakeLists.txt  make.sh
cpp/backtrace/: at_linear.txt  at_matmul_backtrace.txt
cpp/profiling/: addmm.txt  at_matmul.txt  call_stack_at_matmul.txt  gprof.txt
cpp/src/: aten.cpp  benchmark.cpp  code_generation_test.cpp  fbgemm_qlinear.cpp  jit_linear.cpp  libtorch.cpp  linear.cpp  main.cpp  pytorch.cpp  quantized_linear.cpp
notebooks/: __init__.py  compressed_graph.dot  dynamic.ipynb  dynamic_resnet.ipynb  dynamic_vitb16.ipynb  linear.ipynb  openvino_resnet.ipynb  openvino_vitb16.ipynb  original_graph.dot  profiling2023-10-12 19:12:39.114735.txt  resnet.ipynb  test.ipynb  test1.ipynb  test2.ipynb  vitb16.ipynb
profiling_results/: profiling2023-10-12 19:51:05.781127.txt  profiling2023-10-12 20:18:04.933287.txt
python/: utils.py
